ex5/testdata/typechecker/error/NestedVarsErr1.java
class MainClass{
    public static void main(String[] args){
        int x;
        int x;
    }
}

